<resources>
    <string name="app_name">Personal Budgetting Corp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account_register">Don\'t have an account? Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="username_required">Username is required</string>
    <string name="password_required">Password is required</string>
    <string name="password_length_error">Password must be at least 6 characters</string>
    <string name="passwords_mismatch">Passwords do not match</string>
    <string name="invalid_credentials">Invalid username or password</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="registration_failed_username_exists">Registration failed. Username may already exist.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>